Dynamic Gallery Test

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
                     <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias fotos dos nossos produtos</h3>
                 </div>
                 <div class="col-lg-10 mx-auto">
-                    <div id="c-pao" class="carousel slide mb-4" data-bs-ride="carousel">
+                    <div id="c-pao" class="carousel slide paused mb-4">
                         <div class="carousel-inner" id="pao">
                             <div class="carousel-item active">
                                 <img src="assets/foods/pao/1.jpg" alt="Imagem 1" class="d-block w-100">
