--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
                     <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias fotos dos nossos produtos</h3>
                 </div>
                 <div class="col-lg-10 mx-auto">
-                    <div id="c-pao" class="carousel slide paused mb-4">
+                    <div id="c-pao" class="carousel slide mb-4">
                         <div class="carousel-inner" id="pao">
                             <div class="carousel-item active">
                                 <img src="assets/foods/pao/1.jpg" alt="Imagem 1" class="d-block w-100">
@@ -67,7 +67,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
-                    <div id="c-salgados" class="carousel slide mb-4" data-bs-ride="carousel">
+                    <div id="c-salgados" class="carousel slide mb-4">
                         <div class="carousel-inner" id="salgados">
                             <div class="carousel-item active">
                                 <img src="assets/foods/salgados/1.jpg" alt="Imagem 1" class="d-block w-100">
@@ -80,7 +80,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
-                    <div id="c-bolos" class="carousel slide mb-4" data-bs-ride="carousel">
+                    <div id="c-bolos" class="carousel slide mb-4" >
                         <div class="carousel-inner" id="bolos">
                             <div class="carousel-item active" >
                                 <img src="assets/foods/bolos/1.jpg" alt="Imagem 1" class="d-block w-100">
@@ -93,7 +93,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
-                    <div id="c-biscoitos" class="carousel slide mb-4" data-bs-ride="carousel">
+                    <div id="c-biscoitos" class="carousel slide mb-4">
                         <div class="carousel-inner" id="biscoitos">
                             <div class="carousel-item active">
                                 <img src="assets/foods/biscoitos/1.jpg" alt="Imagem 1" class="d-block w-100">
@@ -106,7 +106,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
-                    <div id="c-compotas_manteigas" class="carousel slide mb-4" data-bs-ride="carousel">
+                    <div id="c-compotas_manteigas" class="carousel slide mb-4">
                         <div class="carousel-inner" id="compotas_manteigas">
                             <div class="carousel-item active">
                                 <img src="assets/foods/compotas_manteigas/1.jpg" alt="Imagem 1" class="d-block w-100">
@@ -119,7 +119,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
-                    <div id="c-veggiecinios" class="carousel slide mb-4" data-bs-ride="carousel">
+                    <div id="c-veggiecinios" class="carousel slide mb-4">
                         <div class="carousel-inner" id="veggiecinios">
                             <div class="carousel-item active">
                                 <img src="assets/foods/veggiecinios/1.jpg" alt="Imagem 1" class="d-block w-100">
