Parallax Implementation Test

--- a/gallery2.html
+++ b/gallery2.html
@@ -52,9 +52,9 @@ subpage-template.html<!DOCTYPE html>
               <div class="row">
                 <div class="col-md-3" style="position: fixed">
                     <h2 class="section-heading text-uppercase">Galeria</h2>
-                    <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias</br>fotos dos nossos produtos.</h3>
+                    <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias<br>fotos dos nossos produtos.</h3>
                     <h5 style="text-align: left">Categorias</h5>
-                  </br>
+                  <br>
                   <ul class="nav nav-pills flex-column">
                       <li class="nav-item">
                         <a class="nav-link" href="#category1">Categoria 1</a>
@@ -70,9 +70,9 @@ subpage-template.html<!DOCTYPE html>
 
               <div class="col-md-9" style="margin-left: 350px; margin-top: 150px;">
                 <h5 style="text-align: center">Imagens</h5>
-                </br>
+                <br>
                 <h6 class="sector" id="category1">Categoria 1</h6>
-                </br>
+                <br>
                 <div class="gallerygrid">
                   <div class="imagebox">
                     <img class="image" src="https://picsum.photos/222/200">
@@ -90,9 +90,9 @@ subpage-template.html<!DOCTYPE html>
                     <img class="image" src="https://picsum.photos/200/230">
                   </div>
                 </div>
-                </br>
+                <br>
                 <h6 class="sector" id="category2">Categoria 2</h6>
-                </br>
+                <br>
                 <div class="gallerygrid">
                   <div class="imagebox">
                     <img class="image" src="https://picsum.photos/222/200">
@@ -110,9 +110,9 @@ subpage-template.html<!DOCTYPE html>
                     <img class="image" src="https://picsum.photos/200/230">
                   </div>
                 </div>
-                </br>
+                <br>
                 <h6 class="sector" id="category3">Categoria 3</h6>
-                </br>
+                <br>
                 <div class="gallerygrid">
                   <div class="imagebox">
                     <img class="image" src="https://picsum.photos/222/200">
