--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container">
-                <div class="masthead-subheading">Bem-Vindo à nossa boutique!</div>
-                <div class="masthead-heading text-uppercase">Sabor de Pão</div>
-                <div class="masthead-subheading">Sem Glúten-Sem Leite</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#about">DESCOBRIR MAIS</a>
+            <div class="container"; class="parallax-section"; class="parallax-body"; class="parallax-html">
+                <div class="masthead-subheading"; class="parallax-text">Bem-Vindo à nossa boutique!</div>
+                <div class="masthead-heading text-uppercase"; class="parallax-text">Sabor de Pão</div>
+                <div class="masthead-subheading"; class="parallax-text">Sem Glúten-Sem Leite</div>
+                <a class="btn btn-primary btn-xl text-uppercase; parallax-text" href="#about">DESCOBRIR MAIS</a>
             </div>
         </header>
         <!-- About-->
