--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.png" alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.png" alt="navbar-logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -348,7 +348,7 @@
                                 <div class="modal-body">
                                     <h2 class="text-uppercase mb-5">Pão</h2>
                                     <div class="row">
-                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/pao/1.jpg"/>
+                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/pao/1.jpg" alt="pao"/>
                                         <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     </div>
                                 </div>
@@ -369,7 +369,7 @@
                                 <div class="modal-body">
                                     <h2 class="text-uppercase mb-5">Salgados</h2>
                                     <div class="row">
-                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/salgados/1.jpg"/>
+                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/salgados/1.jpg" alt="salgados"/>
                                         <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     </div>
                                 </div>
@@ -390,7 +390,7 @@
                                 <div class="modal-body">
                                     <h2 class="text-uppercase mb-5">Bolos</h2>
                                     <div class="row">
-                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/bolos/1.jpg"/>
+                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/bolos/1.jpg" alt="bolos"/>
                                         <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     </div>
                                 </div>
@@ -411,7 +411,7 @@
                                 <div class="modal-body">
                                     <h2 class="text-uppercase mb-5">Biscoitos</h2>
                                     <div class="row">
-                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/biscoitos/1.jpg"/>
+                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/biscoitos/1.jpg" alt="biscoitos"/>
                                         <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     </div>
                                 </div>
@@ -432,7 +432,7 @@
                                 <div class="modal-body">
                                     <h2 class="text-uppercase mb-5">Compotas e manteigas</h2>
                                     <div class="row">
-                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/compotas_manteigas/1.jpg"/>
+                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/compotas_manteigas/1.jpg" alt="compotas_manteigas"/>
                                         <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     </div>
                                 </div>
@@ -453,7 +453,7 @@
                                 <div class="modal-body">
                                     <h2 class="text-uppercase mb-5">Laticínios Vegan</h2>
                                     <div class="row">
-                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/veggiecinios/1.jpg"/>
+                                        <img class="img-fluid col-lg-5 col-sm" src="assets/foods/veggiecinios/1.jpg" alt="veggiecinios"/>
                                         <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     </div>
                                 </div>
