--- a/index.html
+++ b/index.html
@@ -103,11 +103,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/foods/pao/1.jpg" alt="pao" />
+                            <img class="img-fluid" src="assets/foods/pao/16.jpg" alt="pao" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Pão</div>
-                            <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                            <div class="portfolio-caption-heading">Pão e Broa</div>
                         </div>
                     </div>
                 </div>
@@ -122,7 +121,6 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Salgados</div>
-                            <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
                         </div>
                     </div>
                 </div>
@@ -133,11 +131,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/foods/bolos/1.jpg" alt="bolos" />
+                            <img class="img-fluid" src="assets/foods/doces/36.jpg" alt="bolos" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Bolos</div>
-                            <div class="portfolio-caption-subheading text-muted">Identity</div>
+                            <div class="portfolio-caption-heading">Doces</div>
                         </div>
                     </div>
                 </div>
@@ -148,11 +145,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/foods/biscoitos/1.jpg" alt="biscoitos" />
+                            <img class="img-fluid" src="assets/foods/biscoitos/2.jpg" alt="biscoitos" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Biscoitos</div>
-                            <div class="portfolio-caption-subheading text-muted">Branding</div>
                         </div>
                     </div>
                 </div>
@@ -166,8 +162,7 @@
                             <img class="img-fluid" src="assets/foods/compotas_manteigas/1.jpg" alt="compotas_manteigas" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Compotas e manteigas</div>
-                            <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                            <div class="portfolio-caption-heading">Compotas e Manteigas</div>
                         </div>
                     </div>
                 </div>
@@ -181,8 +176,7 @@
                             <img class="img-fluid" src="assets/foods/veggiecinios/1.jpg" alt="veggiecinios" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Laticínios vegan</div>
-                            <div class="portfolio-caption-subheading text-muted">Photography</div>
+                            <div class="portfolio-caption-heading">Laticínios Vegan</div>
                         </div>
                     </div>
                 </div>
