Fotos alteração categorias

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/foods/biscoitos/2.jpg" alt="biscoitos" />
+                            <img class="img-fluid" src="assets/foods/biscoitos/1.jpg" alt="biscoitos" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Biscoitos</div>
@@ -159,7 +159,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/foods/compotas_manteigas/1.jpg" alt="compotas_manteigas" />
+                            <img class="img-fluid" src="assets/foods/compotas_manteigas/1.jpeg" alt="compotas_manteigas" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Compotas e Manteigas</div>
