--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
-                            <img class="img-fluid" src="assets/foods/bolos/1.jpg" alt="logo">
+                            <img class="img-fluid" src="assets/foods/doces/1.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
-                            <img class="img-fluid" src="assets/foods/bolos/1.jpg" alt="logo">
+                            <img class="img-fluid" src="assets/foods/doces/1.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
