--- a/gallery2.html
+++ b/gallery2.html
@@ -57,13 +57,22 @@ subpage-template.html<!DOCTYPE html>
                   <br>
                   <ul class="nav nav-pills flex-column">
                       <li class="nav-item">
-                        <a class="nav-link" href="#category1">Categoria 1</a>
+                        <a class="nav-link" href="#category1">Pão e Broa</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#category2">Categoria 2</a>
+                        <a class="nav-link" href="#category2">Salgados</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#category3">Categoria 3</a>
+                        <a class="nav-link" href="#category3">Doces</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#category4">Bisocitos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#category5">Compotas e Manteigas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#category4">Laticínios Vegan</a>
                       </li>
                     </ul>
                 </div>
@@ -71,7 +80,7 @@ subpage-template.html<!DOCTYPE html>
               <div class="col-md-9" style="margin-left: 350px; margin-top: 150px;">
                 <h5 style="text-align: center">Imagens</h5>
                 <br>
-                <h6 class="sector" id="category1">Categoria 1</h6>
+                <h6 class="sector" id="category1">Pão e Broa</h6>
                 <br>
                 <div class="gallerygrid">
                   <div class="imagebox">
@@ -91,7 +100,7 @@ subpage-template.html<!DOCTYPE html>
                   </div>
                 </div>
                 <br>
-                <h6 class="sector" id="category2">Categoria 2</h6>
+                <h6 class="sector" id="category2">Salgados</h6>
                 <br>
                 <div class="gallerygrid">
                   <div class="imagebox">
@@ -111,7 +120,67 @@ subpage-template.html<!DOCTYPE html>
                   </div>
                 </div>
                 <br>
-                <h6 class="sector" id="category3">Categoria 3</h6>
+                <h6 class="sector" id="category3">Doces</h6>
+                <br>
+                <div class="gallerygrid">
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/222/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/150">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/221/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/230">
+                  </div>
+                </div>
+                <br>
+                <h6 class="sector" id="category4">Biscoitos</h6>
+                <br>
+                <div class="gallerygrid">
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/222/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/150">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/221/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/230">
+                  </div>
+                </div>
+                <br>
+                <h6 class="sector" id="category5">Compotas e Manteigas</h6>
+                <br>
+                <div class="gallerygrid">
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/222/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/150">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/221/200">
+                  </div>
+                  <div class="imagebox">
+                    <img class="image" src="https://picsum.photos/200/230">
+                  </div>
+                </div>
+                <br>
+                <h6 class="sector" id="category6">Laticínios Vegan</h6>
                 <br>
                 <div class="gallerygrid">
                   <div class="imagebox">
