Orders Form Updated

--- a/orders.html
+++ b/orders.html
@@ -57,69 +57,10 @@
                     <h2 class="section-heading text-uppercase">Encomendas</h2>
                     <h3 class="section-subheading text-muted">Peça aqui a sua encomenda da nossa loja direto para sua casa ou para vir buscar.</h3>
                 </div>
-                
-                <div class="container mt-5 mb-5 d-flex justify-content-center">
-                    <div class="card px-1 py-4">
-                        <div class="card-body">
-                            <h5 class="card-title mb-3">Formato da Encomenda</h5>
-                            <div class="d-flex flex-row">
-                                <label class="radio">   
-                                    <input type="radio" name="add" value="takeaway"> <span> <i class="fa fa-truck-fast"></i> Take Away </span> 
-                                </label>
-                                &ensp;
-                                <label class="radio">
-                                    <input type="radio" name="add" value="home"> <span> <i class="fa-solid fa-house-user"></i> Entrega ao Domícilio </span> 
-                                </label> 
-                            </div>
-                            <h6 class="information mt-4">Introduza os seus dados para completar a encomenda:</h6>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Nome"> 
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="form-group" style="padding-bottom: 10px">
-                                        <input class="form-control" type="text" placeholder="Email">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="form-group text-muted">
-                                        <input class="form-control" id="phone" type="number" placeholder="Nº Telemóvel">
-                                        <script>
-                                            var input = document.querySelector("#phone");
-                                            window.intlTelInput(input, {
-                                                separateDialCode: false,
-                                                preferredCountries: ["pt", "gb", "es", "fr"],
-                                                initialCountry:"pt",
-                                            });
-                                        </script>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="form-group">
-                                        <textarea class="textarea resize-ta" style="resize:vertical" type="text" placeholder="Descrição da Encomenda"></textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class=" d-flex flex-column px-1 mt-3 mb-3"> 
-                                <br>
-                                <div>
-                                    <input type="checkbox">
-                                    <label class="agree-text">Li e aceito os </label>
-                                    <a href="https://eur-lex.europa.eu/legal-content/PT/TXT/PDF/?uri=CELEX:32016R0679" class="terms">Termos e Condições</a> 
-                                </div>
-                            </div>
-                            <button class="btn btn-primary btn-block confirm-button">Confirmar encomenda</button>
-                        </div>
-                    </div>
-                </div>
+                        
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc_MjBR9a_-Cr7wy8KaptcuWnKF1oRXJpAe1GipgNHkGeYmw/viewform?embedded=true" 
+            width="640" height="1150" frameborder="0" marginheight="0" marginwidth="0" style="margin-left: 25%;">A carregar…</iframe>
+
         </form>
 
         </section>
