--- a/orders.html
+++ b/orders.html
@@ -59,7 +59,7 @@
                 </div>
                         
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc_MjBR9a_-Cr7wy8KaptcuWnKF1oRXJpAe1GipgNHkGeYmw/viewform?embedded=true" 
-            width="640" height="1150" frameborder="0" marginheight="0" marginwidth="0" style="margin-left: 25%;">A carregar…</iframe>
+            width="640" height="1150">A carregar…</iframe>
 
         </form>
 
