--- a/gallery.html
+++ b/gallery.html
@@ -80,16 +80,16 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
-                    <div id="c-bolos" class="carousel slide mb-4" >
-                        <div class="carousel-inner" id="bolos">
+                    <div id="c-doces" class="carousel slide mb-4" >
+                        <div class="carousel-inner" id="doces">
                             <div class="carousel-item active" >
                                 <img src="assets/foods/doces/1.jpg" alt="Imagem 1" class="d-block w-100">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#c-bolos" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c-doces" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon"></span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#c-bolos" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#c-doces" data-bs-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
