--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/foods/doces/33.jpg" alt="bolos" />
+                            <img class="img-fluid" src="assets/foods/doces/33.jpg" alt="doces" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Doces</div>
@@ -388,7 +388,7 @@
                             <div class="modal-body">
                                 <h2 class="text-uppercase mb-5">Doces</h2>
                                 <div class="row">
-                                    <img class="img-fluid col-lg-5 col-sm" src="assets/foods/doces/33.jpg" alt="bolos"/>
+                                    <img class="img-fluid col-lg-5 col-sm" src="assets/foods/doces/33.jpg" alt="doces"/>
                                     <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                 </div>
                             </div>
