--- a/gallery2.html
+++ b/gallery2.html
@@ -72,12 +72,12 @@ subpage-template.html<!DOCTYPE html>
                         <a class="nav-link" href="#category5">Compotas e Manteigas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#category4">Laticínios Vegan</a>
+                        <a class="nav-link" href="#category6">Laticínios Vegan</a>
                       </li>
-                    </ul>
+                  </ul>
                 </div>
 
-              <div class="col-md-9" style="margin-left: 350px; margin-top: 150px;">
+              <div class="col-md-9" style="margin-left: 25%; margin-top: 150px;">
                 <h5 style="text-align: center">Imagens</h5>
                 <br>
                 <h6 class="sector" id="category1">Pão e Broa</h6>
