--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,8 @@
                     <h2 class="section-heading text-uppercase">Galeria</h2>
                     <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias fotos dos nossos produtos</h3>
                 </div>
-                <div class="col-lg-10 mx-auto">
+                <div class="col-lg-8 mx-auto">
+                    <h3>Pão</h3>
                     <div id="c-pao" class="carousel slide mb-4">
                         <div class="carousel-inner" id="pao">
                             <div class="carousel-item active">
@@ -67,6 +68,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
+                    <h3>Salgados</h3>
                     <div id="c-salgados" class="carousel slide mb-4">
                         <div class="carousel-inner" id="salgados">
                             <div class="carousel-item active">
@@ -80,6 +82,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
+                    <h3>Doces</h3>
                     <div id="c-doces" class="carousel slide mb-4" >
                         <div class="carousel-inner" id="doces">
                             <div class="carousel-item active" >
@@ -93,6 +96,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
+                    <h3>Biscoitos</h3>
                     <div id="c-biscoitos" class="carousel slide mb-4">
                         <div class="carousel-inner" id="biscoitos">
                             <div class="carousel-item active">
@@ -106,6 +110,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
+                    <h3>Compotas e Manteigas</h3>
                     <div id="c-compotas_manteigas" class="carousel slide mb-4">
                         <div class="carousel-inner" id="compotas_manteigas">
                             <div class="carousel-item active">
@@ -119,6 +124,7 @@
                             <span class="carousel-control-next-icon"></span>
                         </button>
                     </div>
+                    <h3>Veggiecinios</h3>
                     <div id="c-veggiecinios" class="carousel slide mb-4">
                         <div class="carousel-inner" id="veggiecinios">
                             <div class="carousel-item active">
