--- a/orders.html
+++ b/orders.html
@@ -51,18 +51,16 @@
         <div class="navbar-spacer"></div>
         <!-- Orders-->
         <section class="page-section" id="orders">
-        <form action="submitcomplete.html"> 
             <div class="container">
                 <div class="text">
                     <h2 class="section-heading text-uppercase">Encomendas</h2>
                     <h3 class="section-subheading text-muted">Peça aqui a sua encomenda da nossa loja direto para sua casa ou para vir buscar.</h3>
                 </div>
-                        
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc_MjBR9a_-Cr7wy8KaptcuWnKF1oRXJpAe1GipgNHkGeYmw/viewform?embedded=true" 
-            width="640" height="1150">A carregar…</iframe>
-
-        </form>
-
+                <div class="d-flex justify-content-center">
+                    <iframe class="text-center" src="https://docs.google.com/forms/d/e/1FAIpQLSdc_MjBR9a_-Cr7wy8KaptcuWnKF1oRXJpAe1GipgNHkGeYmw/viewform?embedded=true"
+                            width="640" height="1050px" scrolling="no"></iframe>
+                </div>
+            </div>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
