--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
             </div>
             <div class="row">
                 <div class="text-justify col-md-8 mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+                   Somos uma botique situada em São João da Madeira, que tem por base a confeção de produtos saudáveis, naturais e totalmente isentos de glúten e leite.
+                   Pretendemos também dar a melhor experiência a quem vos visita através do sabor e da qualidade que temos nos nossos produtos.
+                   <br>
+                   Nascemos devido à necessidade destes produtos na nossa alimentação e decidimos então que seria uma
+                   <br>
+                   <a class="nav-link" href="gallery.html">Pão e Broa</a>
                 </div>
                 <div class="col-md-4 col-8 mx-auto">
                     <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
