--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <div class="row justify-content-center">
                         <div class="col mx-md-4 mx-sm-1">
                             <div class="modal-body">
-                                <h2 class="text-uppercase mb-5">Pão</h2>
+                                <h2 class="text-uppercase mb-5">Pão e Broa</h2>
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/pao/16.jpg" alt="pao"/>
                                     <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
