--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                    <br>
                    Nascemos devido à necessidade destes produtos na nossa alimentação e decidimos então que seria uma
                    <br>
-                   <a class="nav-link" href="gallery.html">Pão e Broa</a>
+                   <a class="nav-link" href="gallery.html#h-doces">Pão e Broa</a>
                 </div>
                 <div class="col-md-4 col-8 mx-auto">
                     <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
