--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                    <br>
                    Nascemos devido à necessidade destes produtos na nossa alimentação e decidimos então que seria uma
                    <br>
-                   <a class="nav-link" href="gallery.html#h-doces">Pão e Broa</a>
+                   
                 </div>
                 <div class="col-md-4 col-8 mx-auto">
                     <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
@@ -344,7 +344,7 @@
                                 <h2 class="text-uppercase mb-5">Pão e Broa</h2>
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/pao/16.jpg" alt="pao"/>
-                                    <p class="col-lg-7 col-sm text-justify">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p class="col-lg-7 col-sm text-justify">Desde broa de milho, pão Sabor de Pão, a pão de beterraba e cenoura ou alfarroba, temos tudo o que possa pretender.<br><br><a class="produtos" href="gallery.html#h-pao">Clique aqui para colsultar fotos destes produtos</a></p>
                                 </div>
                             </div>
                         </div>
