--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                    Somos uma botique situada em São João da Madeira, que tem por base a confeção de produtos saudáveis, naturais e totalmente isentos de glúten e leite.
                    Pretendemos também dar a melhor experiência a quem vos visita através do sabor e da qualidade que temos nos nossos produtos.
                    <br>
-                   Nascemos devido à necessidade destes produtos na nossa alimentação e decidimos então que seria uma
+                   Nascemos devido à necessidade desta alteração alimentar no nosso dia-a-dia e decidimos então que 2017 seria o ano para começarmos a mostrar as nossas maravilhas saudáveis para o mundo.
                    <br>
-                   
+                   É tudo feito de forma tradicional e inteiramente familiar, de modo a podermos oferecer a melhor qualidade de atendimento e sabor aos nossos clientes.
                 </div>
                 <div class="col-md-4 col-8 mx-auto">
                     <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
