--- a/gallery.html
+++ b/gallery.html
@@ -151,7 +151,7 @@
                                 <span class="carousel-control-next-icon"></span>
                             </button>
                         </div>
-                        <h3 id="h-veggiecinios" class="pt-2">Veggiecinios</h3>
+                        <h3 id="h-veggiecinios" class="pt-2">Laticínios Vegan</h3>
                         <div id="c-veggiecinios" class="carousel slide mb-4">
                             <div class="carousel-inner" id="veggiecinios">
                                 <div class="carousel-item active">
