--- a/events.html
+++ b/events.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="row">
                         <div class="text-justify col-lg-8 mb-3 mb-lg-0">
-                            <h2>TITLE</h2>
+                            <h2>Páscoa Feliz</h2>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
