About texto final

--- a/index.html
+++ b/index.html
@@ -71,12 +71,19 @@
             </div>
             <div class="row">
                 <div class="text-justify col-md-8 mb-4">
-                   Somos uma botique situada em São João da Madeira, que tem por base a confeção de produtos saudáveis, naturais e totalmente isentos de glúten e leite.
-                   Pretendemos também dar a melhor experiência a quem vos visita através do sabor e da qualidade que temos nos nossos produtos.
+                   Somos uma botique situada em São João da Madeira, formada em outubro de 2017, com o intuíto de proporcionar aos nossos clientes uma dieta sudável, biológica, sem OGM* e principalmente sem glúten e sem leite.
                    <br>
-                   Nascemos devido à necessidade desta alteração alimentar no nosso dia-a-dia e decidimos então que 2017 seria o ano para começarmos a mostrar as nossas maravilhas saudáveis para o mundo.
+                   Tudo surgiu quando começaram a ser detetadas intolerâncias e alergias ao glúten e leite na nossa família e, junto disso, a necessidade de uma melhor qualidade de produtos. Tivemos de alterar a nossa vida e a nossa alimentação toda e começamos a confecionar bolos e pães em casa. 
+                   O que fazíamos era bom e a quantidade de elogios só aumentava de dia para dia. Com isso crescia também o incentivo para abrirmos um espaço de modo a apresentarmos a mais pessoas o nosso trabalho.
                    <br>
-                   É tudo feito de forma tradicional e inteiramente familiar, de modo a podermos oferecer a melhor qualidade de atendimento e sabor aos nossos clientes.
+                   Desde aí que temos vindo a inovar com novidades regularmente e tentamos atingir o máximo de áreas possíveis na alimentação, para que aos nossos clientes nada falte.
+                   <br>
+                   Hoje já contamos com produtos que vão desde o pão tradicional, até salgados, como pizza, compotas, doces e bolos tradicionais e até mesmo, mais recentemente, uma linha de produtos vegan com queijos, iogurtes, gelados e bebidas vegetais, para proporcionarmos aos  nossos clientes alérgicos ou intolerantes ao leite, a alegria de voltarem a consumir tais produtos sem que lhes provoque qualquer tipo de problema, mantendo o sabor original.
+                   <br>
+                   Para além disso, de modo a melhorar ainda mais a qualidade e sabor dos alimentos que produzimos, utilizamos processos de fabrico tradicionais e não industrializados.
+                   <br>
+                   <br>
+                   *Organismos Geneticamente Modificados
                 </div>
                 <div class="col-md-4 col-8 mx-auto">
                     <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
