--- a/events.html
+++ b/events.html
@@ -59,19 +59,12 @@
                         <div class="col">
                             <div class="h4">Sabor de Pão</div>
                         </div>
-                        <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>dd/mm/yy</div>
+                        <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>05/04/2023</div>
                     </div>
                     <div class="row">
-                        <div class="text-justify col-lg-8 mb-3 mb-lg-0">
+                        <div class="text-justify">
                             <h2>Páscoa Feliz</h2>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                        </div>
-                        <div class="col-lg-4 col-12 mx-auto">
-                            <img class="img-fluid" src="assets/foods/doces/1.jpg" alt="logo">
+                            <img class="img-fluid" src="assets/eventos/pascoa.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
@@ -81,19 +74,51 @@
                         <div class="col">
                             <div class="h4">Sabor de Pão</div>
                         </div>
-                        <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>dd/mm/yy</div>
+                        <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>08/12/2022</div>
                     </div>
                     <div class="row">
                         <div class="text-justify col-lg-8 mb-3 mb-lg-0">
-                            <h2>TITLE</h2>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+                            <h2>Menu Natal</h2>
+                            A nossa ementa para que o seu NATAL seja SAUDÁVEL e DELICIOSO !!
+                            Para mais informação ou encomendas, contatar-nos por mensagem privada,  ou WhatsApp para o n.º 91 450 460 7 (custo de uma chamada para rede móvel nacional) 
+                           <br> ˜”*°•.˜”*°• FELIZ NATAL !!!!!! •°*”˜.•°*”˜
+                            <img class="img-fluid" src="assets/eventos/natal.jpg" alt="logo">
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
-                            <img class="img-fluid" src="assets/foods/doces/1.jpg" alt="logo">
+                            
+                            <p><img class="img-fluid" src="assets/eventos/tronco.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/eventos/rabanadas.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/eventos/bolorei.jpg" alt="logo"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-item p-md-4 p-3 mb-md-4 mb-3">
+                    <div class="row d-flex align-items-center mb-3">
+                        <img class="col-4 blog-avatar" src="assets/img/logos/logo.png" alt="costumer-portrait">
+                        <div class="col">
+                            <div class="h4">Sabor de Pão</div>
+                        </div>
+                        <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>05/12/2022</div>
+                    </div>
+                    <div class="row">
+                        <div class="text-justify">
+                            <h2>Mudança de Horário</h2>
+                            <img class="img-fluid" src="assets/eventos/horario2.jpg" alt="logo">
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-item p-md-4 p-3 mb-md-4 mb-3">
+                    <div class="row d-flex align-items-center mb-3">
+                        <img class="col-4 blog-avatar" src="assets/img/logos/logo.png" alt="costumer-portrait">
+                        <div class="col">
+                            <div class="h4">Sabor de Pão</div>
+                        </div>
+                        <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>27/09/2022</div>
+                    </div>
+                    <div class="row">
+                        <div class="text-justify">
+                            <h2>Mudança Horário</h2>
+                            <img class="img-fluid" src="assets/eventos/mudanca_horario.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
