--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
                         <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>05/04/2023</div>
                     </div>
                     <div class="row">
-                        <div class="text-justify">
+                        <div class="text-justify col-lg-8 mb-3 mb-lg-0">
                             <h2>Páscoa Feliz</h2>
                             <img class="img-fluid" src="assets/eventos/pascoa.jpg" alt="logo">
                         </div>
@@ -79,10 +79,36 @@
                     <div class="row">
                         <div class="text-justify col-lg-8 mb-3 mb-lg-0">
                             <h2>Menu Natal</h2>
-                            A nossa ementa para que o seu NATAL seja SAUDÁVEL e DELICIOSO !!
-                            Para mais informação ou encomendas, contatar-nos por mensagem privada,  ou WhatsApp para o n.º 91 450 460 7 (custo de uma chamada para rede móvel nacional) 
-                           <br> ˜”*°•.˜”*°• FELIZ NATAL !!!!!! •°*”˜.•°*”˜
-                            <img class="img-fluid" src="assets/eventos/natal.jpg" alt="logo">
+                           <p>- Pão-de-ló semi-húmido à Sabor de Pão [un]<br>
+                            - Pão-de-ló semi-húmido de cacau cru [un]<br>
+                            - Pão-de-ló húmido de comer à colher [un]<br>
+                            </p> 
+                            <p>- Biscoitos tipo húngaros[100 g]<br>
+                                - Cookies Vegan [100 g]<br>
+                                - Biscóbombom [100 g]<br>
+                            </p> 
+                            <p>- Leite creme [kg]<br>
+                                - Aletria [kg]<br>
+                            </p> 
+                            <p>- Rabanadas no forno [kg]<br>
+                                - Tronco de Natal [1/2 tronco / 1 tronco]<br>
+                                - Bolo Rainha só frutos secos [kg]<br>
+                                - Bolo Rei de cacau cru [kg]<br>
+                                - Panetone [un]<br>
+                            </p>
+                            <p>- Bolo de cacau cru [kg]<br>
+                                - Bolo "Oreo" (cacau ou ovos) [kg]<br>
+                                - Bolo do bolacha [kg]<br>
+                            </p>
+                            <p>- Croquetes no forno (carnes brancas, vegetais) [un]<br>
+                                - Rissóis no forno (recheios diversos) [un]<br>
+                                - Padinhas de cogumelos [un]<br>
+                                - Broa de milho bacalhau [500g/1kg]<br>
+                                - Pataniscas sem fritar (bacalhau, vegetais) [kg]<br>
+                                - Panados de frango no forno [kg]<br>
+                            </p>
+
+                            
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
                             
